syntax = "proto3";

package skpilot_ctl_service;

option go_package = "p9t.io/skafos/pkg/proto";

import "skdefault.proto";

message ApplyRatioRuleRequest {
    bytes ratio_rule = 1;
}

message ApplyRegexRuleRequest {
    bytes regex_rule = 1;
}

service SkpilotCtlService {
    rpc ApplyRatioRule(ApplyRatioRuleRequest) returns(skdefault.DefaultResponse);
    rpc ApplyRegexRule(ApplyRegexRuleRequest) returns(skdefault.DefaultResponse);
}